tests/errors/syn.kt
fun Func x: Int, y: Int): Int {
    return x + y
}
